<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium_margin">

    <TextView
        android:id="@+id/payment_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_xlarge"
        android:textColor="@color/text_dark"
        tools:text="Monto a Pagar"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="@dimen/text_large"
        android:textColor="@color/text_dark"
        android:text="@string/payment_method_label"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin">

        <ImageView
            android:id="@+id/payment_method_image"
            android:layout_width="46dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:src="@drawable/mercado_pago_logo"
            android:layout_alignParentStart="true"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/payment_method_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/payment_method_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:textSize="@dimen/text_xlarge"
            android:textColor="@color/text_dark"
            tools:text="Visa"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="@dimen/text_large"
        android:textColor="@color/text_dark"
        android:text="@string/bank_label"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin">

        <ImageView
            android:id="@+id/card_issuer_image"
            android:layout_width="46dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:src="@drawable/mercado_pago_logo"
            android:layout_alignParentStart="true"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/card_issuer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_issuer_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:textSize="@dimen/text_xlarge"
            android:textColor="@color/text_dark"
            tools:text="Visa"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="@dimen/text_large"
        android:textColor="@color/text_dark"
        android:text="@string/installments_label"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin">

        <TextView
            android:id="@+id/installments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recommended_message"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_dark"
            tools:text="Cuotas: 0"
            />

        <TextView
            android:id="@+id/installment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/installments"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_below="@id/recommended_message"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_dark"
            tools:text="Monto: 0"
            />

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/installment_amount"
            android:layout_below="@id/recommended_message"
            android:layout_marginStart="@dimen/medium_margin"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_dark"
            tools:text="Total: 0"
            />

    </RelativeLayout>

</LinearLayout>